[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/matchup_pro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=2]
[ext_resource path="res://scripts/get_Game_stat.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 61
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[node name="game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -28.0
margin_top = -11.0
margin_right = 1036.0
margin_bottom = 614.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Button" type="Button" parent="Control/ColorRect"]
margin_left = 424.852
margin_top = 476.553
margin_right = 601.852
margin_bottom = 531.553
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ColorRect"]
margin_left = 311.422
margin_top = 21.1022
margin_right = 694.422
margin_bottom = 101.102
custom_colors/font_color = Color( 0.0784314, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0.160784, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pollution" type="Label" parent="Control"]
margin_left = 49.0
margin_top = 194.0
margin_right = 452.0
margin_bottom = 262.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Total Pollution:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poll_perctange" type="Label" parent="Control/pollution"]
margin_left = 410.0
margin_top = 6.0
margin_right = 562.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bankrupt" type="Label" parent="Control"]
margin_left = 53.0
margin_top = 351.0
margin_right = 467.0
margin_bottom = 419.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Times Bankrupt:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bankrupt_count" type="Label" parent="Control/bankrupt"]
margin_left = 423.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="Control"]
margin_left = 55.0
margin_top = 271.0
margin_right = 458.0
margin_bottom = 339.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Money Left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money_left" type="Label" parent="Control/money"]
margin_left = 313.0
margin_top = 3.0
margin_right = 465.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.392157, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/ColorRect/Restart_Button" to="Control" method="_on_Restart_Button_pressed"]
